--- a/Scrambled Net Full/res/values/strings.xml
+++ b/Scrambled Net Full/res/values/strings.xml
@@ -57,6 +57,7 @@ for more details.\n</string>
     <string name="scores_clicks">Clicks</string>
     <string name="scores_time">Time</string>
     <string name="scores_when">When</string>
+    <string name="menu_scores_reset">Reset all scores</string>
         
 
     <!-- Text displayed in pause mode. -->
@@ -94,6 +95,7 @@ or "Continue" to experiment with this layout.</string>
     <string name="menu_show_scores">High scores</string>
     <string name="menu_set_skill">Skill level</string>
     <string name="menu_sound">Sound...</string>
+    <string name="menu_autosolve">Solve It!</string>
     <string name="menu_help">Help</string>
     <string name="menu_about">About</string>
     <string name="no_sounds">No sounds</string>
