--- a/Scrambled Net Full/res/values/strings.xml
+++ b/Scrambled Net Full/res/values/strings.xml
@@ -45,6 +45,21 @@ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
 for more details.\n</string>
 
+    <string name="eula_title">License Agreement</string>
+    
+    <string name="eula_text">Scrambled Net is distributed in the hope
+that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License at http://www.gnu.org/licenses/gpl-2.0.html
+for more details.\n\
+\n\
+If you disagree with this license, please uninstall this app within 24 hours
+of purchase for a full refund.\n\
+\n\
+This program is open-source software.  The source code
+can be obtained on the project home page; see the About screen.</string>
+
     <!-- Help strings. -->
     <string name="help_title">Scrambled Net User\'s Manual</string>
 
