Substrate: added Interaggregate.

--- a/Substrate/res/values/strings.xml
+++ b/Substrate/res/values/strings.xml
@@ -4,11 +4,15 @@
     
     <string name="app_name">Substrate</string>
     <string name="app_author">Moonblink</string>
-    <string name="app_desc">Lines like crystals slowly grow on a computational substrate.</string>
+    <string name="app_desc">A collection of live wallpapers.</string>
+      
+    <!-- Substrate. -->
      
-    <string name="wallpaper_substrate">Substrate</string>
+    <string name="substrate_title">Substrate</string>
+    <string name="substrate_author">Moonblink</string>
+    <string name="substrate_desc">Lines like crystals slowly grow on a computational substrate.</string>
     
-    <!--  Substrate Preferences. -->
+    <!-- Substrate Preferences. -->
     
     <string name="substrate_settings">Substrate preferences</string>
     
@@ -25,6 +29,30 @@
     <string name="substrate_prefs_sand">Sand density</string>
     <string name="substrate_prefs_sand_summary">Amount of sand-paint stroke to draw on cracks</string>
     <string name="substrate_prefs_sand_title">Sand Density</string>
+   
+    <!-- Interaggregate. -->
+     
+    <string name="interaggregate_title">Interaggregate</string>
+    <string name="interaggregate_author">Moonblink</string>
+    <string name="interaggregate_desc">Lines like crystals slowly grow on a computational interaggregate.</string>
+    
+    <!-- Interaggregate Preferences. -->
+    
+    <string name="interaggregate_settings">Substrate preferences</string>
+    
+    <string name="interaggregate_prefs_title">Substrate Preferences</string>
+    
+    <string name="interaggregate_prefs_cycles">Run time</string>
+    <string name="interaggregate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
+    <string name="interaggregate_prefs_cycles_title">Run Time</string>
+    
+    <string name="interaggregate_prefs_cracks">Cracks</string>
+    <string name="interaggregate_prefs_cracks_summary">Number of cracks to develop at once</string>
+    <string name="interaggregate_prefs_cracks_title">Cracks</string>
+    
+    <string name="interaggregate_prefs_sand">Sand density</string>
+    <string name="interaggregate_prefs_sand_summary">Amount of sand-paint stroke to draw on cracks</string>
+    <string name="interaggregate_prefs_sand_title">Sand Density</string>
    
 </resources>
 
