--- a/Substrate/res/values/strings.xml
+++ b/Substrate/res/values/strings.xml
@@ -93,9 +93,9 @@ for more details.\n</string>
     <string name="substrate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
     <string name="substrate_prefs_cycles_title">Run Time</string>
     
-    <string name="substrate_prefs_cracks">Cracks</string>
+    <string name="substrate_prefs_cracks">Number of cracks</string>
     <string name="substrate_prefs_cracks_summary">Number of cracks to develop at once</string>
-    <string name="substrate_prefs_cracks_title">Cracks</string>
+    <string name="substrate_prefs_cracks_title">Number of Cracks</string>
     
     <string name="substrate_prefs_sand">Sand density</string>
     <string name="substrate_prefs_sand_summary">Amount of sand-paint stroke to draw on cracks</string>
@@ -117,20 +117,20 @@ for more details.\n</string>
     <string name="interaggregate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
     <string name="interaggregate_prefs_cycles_title">Run Time</string>
     
-    <string name="interaggregate_prefs_discs">Discs</string>
+    <string name="interaggregate_prefs_discs">Number of discs</string>
     <string name="interaggregate_prefs_discs_summary">Number of moving discs intersecting in the scene</string>
-    <string name="interaggregate_prefs_discs_title">Discs</string>
+    <string name="interaggregate_prefs_discs_title">Number of Discs</string>
     
     <string name="interaggregate_prefs_dsize">Disc sizes</string>
     <string name="interaggregate_prefs_dsize_summary">Sizes of the discs</string>
     <string name="interaggregate_prefs_dsize_title">Disc Sizes</string>
     
-    <string name="interaggregate_prefs_2dim">Move in both dimensions</string>
+    <string name="interaggregate_prefs_2dim">Both dimensions</string>
     <string name="interaggregate_prefs_2dim_summary_off">Discs move only horizontally</string>
     <string name="interaggregate_prefs_2dim_summary_on">Discs move horizontally and vertically</string>
     
     <string name="interaggregate_prefs_sand">Sand density</string>
-    <string name="interaggregate_prefs_sand_summary">Amount of sand-paint stroke to draw on cracks</string>
+    <string name="interaggregate_prefs_sand_summary">Amount of sand-paint stroke to draw the intersections with</string>
     <string name="interaggregate_prefs_sand_title">Sand Density</string>
     
     <!-- Sand Traveller. -->
