--- a/Substrate/res/values/strings.xml
+++ b/Substrate/res/values/strings.xml
@@ -200,22 +200,22 @@ for more details.\n</string>
     <string name="happy_prefs_cycles">Run time</string>
     <string name="happy_prefs_cycles_summary">Number of iterations to run for before resetting</string>
     <string name="happy_prefs_cycles_title">Run Time</string>
-      
+
     <!-- Node.Garden. -->
-     
+
     <string name="nodes_title">Node.Garden</string>
     <string name="nodes_author">Moonblink</string>
     <string name="nodes_desc">Nodes are connected together to form a Node Garden.</string>
     
     <!-- Node.Garden Preferences. -->
-    
+
     <string name="nodes_settings">Node.Garden preferences</string>
     
     <string name="nodes_prefs_title">Node.Garden Preferences</string>
     
-    <string name="nodes_prefs_cycles">Run time</string>
-    <string name="nodes_prefs_cycles_summary">Number of iterations to run for before resetting</string>
-    <string name="nodes_prefs_cycles_title">Run Time</string>
-   
+    <string name="nodes_prefs_pattern">Initial arrangement</string>
+    <string name="nodes_prefs_pattern_summary">How are the nodes initially placed</string>
+    <string name="nodes_prefs_pattern_title">Initial Arrangement</string>
+    
 </resources>
 
