--- a/Substrate/res/values/strings.xml
+++ b/Substrate/res/values/strings.xml
@@ -84,6 +84,10 @@ for more details.\n</string>
     <string name="eyecandy_prefs_speed_summary">Faster risks a less responsive home screen</string>
     <string name="eyecandy_prefs_speed_title">Animation Speed</string>
       
+    <string name="eyecandy_prefs_cycles">Run time</string>
+    <string name="eyecandy_prefs_cycles_summary">Number of iterations to run for before resetting</string>
+    <string name="eyecandy_prefs_cycles_title">Run Time</string>
+    
       
     <!-- Substrate. -->
      
@@ -96,10 +100,6 @@ for more details.\n</string>
     <string name="substrate_settings">Substrate preferences</string>
     
     <string name="substrate_prefs_title">Substrate Preferences</string>
-    
-    <string name="substrate_prefs_cycles">Run time</string>
-    <string name="substrate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
-    <string name="substrate_prefs_cycles_title">Run Time</string>
     
     <string name="substrate_prefs_cracks">Number of cracks</string>
     <string name="substrate_prefs_cracks_summary">Number of cracks to develop at once</string>
@@ -120,10 +120,6 @@ for more details.\n</string>
     <string name="interaggregate_settings">Inter.Aggregate preferences</string>
     
     <string name="interaggregate_prefs_title">Inter.Aggregate Preferences</string>
-    
-    <string name="interaggregate_prefs_cycles">Run time</string>
-    <string name="interaggregate_prefs_cycles_summary">Number of iterations to run for before resetting</string>
-    <string name="interaggregate_prefs_cycles_title">Run Time</string>
     
     <string name="interaggregate_prefs_discs">Number of discs</string>
     <string name="interaggregate_prefs_discs_summary">Number of moving discs intersecting in the scene</string>
@@ -153,10 +149,6 @@ for more details.\n</string>
     
     <string name="sandtrav_prefs_title">Sand.Traveler Preferences</string>
     
-    <string name="sandtrav_prefs_cycles">Run time</string>
-    <string name="sandtrav_prefs_cycles_summary">Number of iterations to run for before resetting</string>
-    <string name="sandtrav_prefs_cycles_title">Run Time</string>
-      
     <string name="sandtrav_prefs_spaint">Use sand painter</string>
     <string name="sandtrav_prefs_spaint_summary_off">A simple painter will be used.</string>
     <string name="sandtrav_prefs_spaint_summary_on">A sand painter will be used.</string>
@@ -181,10 +173,6 @@ for more details.\n</string>
     
     <string name="guts_prefs_title">Guts Preferences</string>
     
-    <string name="guts_prefs_cycles">Run time</string>
-    <string name="guts_prefs_cycles_summary">Number of iterations to run for before resetting</string>
-    <string name="guts_prefs_cycles_title">Run Time</string>
-       
     <!-- Happy.Place. -->
      
     <string name="happy_title">Happy.Place</string>
@@ -196,10 +184,6 @@ for more details.\n</string>
     <string name="happy_settings">Happy.Place preferences</string>
     
     <string name="happy_prefs_title">Happy.Place Preferences</string>
-    
-    <string name="happy_prefs_cycles">Run time</string>
-    <string name="happy_prefs_cycles_summary">Number of iterations to run for before resetting</string>
-    <string name="happy_prefs_cycles_title">Run Time</string>
 
     <!-- Node.Garden. -->
 
