--- a/Substrate/res/values/strings.xml
+++ b/Substrate/res/values/strings.xml
@@ -9,9 +9,9 @@
           
     <!-- Boilerplate Dialogs. -->
      
-    <string name="eula_title">Using Live Wallpapers</string>
+    <string name="intro_title">Using Live Wallpapers</string>
     
-    <string name="eula_text">This application displays previews of some
+    <string name="intro_text">This application displays previews of some
 live wallpapers, and allows you to change the settings of the current live
 wallpaper.  To actually use one of these as your wallpaper, you
 need to set it as follows:\n\
