--- a/Tricorder/res/values/strings.xml
+++ b/Tricorder/res/values/strings.xml
@@ -31,14 +31,34 @@ for more details.\n</string>
     <string name="menu_about">About</string>
     <string name="menu_exit">Exit</string>
     
+    <!-- "New features" dialog. -->
+    <string name="newf_title">New in this version</string>
+    <string name="newf_text">NEW SCANNING MODE: Press the SCAN button to start
+scanning in the GRAV and MAG views.\n\
+\n\
+To restore the old mode, or control the sound, see the settings.\n\
+\n\
+For more information, see the help.</string>
+    
     <!-- Preferences strings. -->
     <string name="prefs_title">Settings</string>
+    <string name="prefs_cat_data">Data</string>
+    <string name="prefs_scancont">Scan continuously</string>
+    <string name="prefs_scancont_summary_off">Scanning is manual: press the \"SCAN\" button to scan</string>
+    <string name="prefs_scancont_summary_on">Scanning is continuous, not under user control</string>
+    <string name="prefs_fake">Simulate missing</string>
+    <string name="prefs_fake_summary_off">Use simulated data for missing sensors</string>
+    <string name="prefs_fake_summary_on">Use simulated data for missing sensors</string>
     <string name="prefs_cat_sound">Sound</string>
     <string name="prefs_sound">Sound level</string>
     <string name="prefs_sound_summary">Set your desired sound level</string>
     <string name="prefs_sound_title">Sound Level</string>
+    <string name="prefs_scansound">Scanning sound</string>
+    <string name="prefs_scansound_summary_off">No scanning sound will be played</string>
+    <string name="prefs_scansound_summary_on">Scanning sound will play while scanning under user control</string>
     <string name="prefs_ping">WiFi ping</string>
-    <string name="prefs_ping_summary">Indicate WiFi signals by audible ping</string>
+    <string name="prefs_ping_summary_off">No audible ping in WiFi scanning</string>
+    <string name="prefs_ping_summary_on">Indicate WiFi signals by audible ping</string>
     <string name="prefs_cat_display">Display</string>
     <string name="prefs_orient">Screen orientation</string>
     <string name="prefs_orient_summary">Set your desired screen rotation behaviour</string>
@@ -46,9 +66,6 @@ for more details.\n</string>
     <string name="prefs_wakelock">Keep device awake</string>
     <string name="prefs_wakelock_summary_off">The device will sleep normally after the screen times out.</string>
     <string name="prefs_wakelock_summary_on">The device will stay awake while the app is running.  Warning: battery drain!</string>
-    <string name="prefs_cat_data">Data</string>
-    <string name="prefs_fake">Simulate missing</string>
-    <string name="prefs_fake_summary">Use simulated data for missing sensors</string>
     <string name="prefs_cat_audio">Audio Analysis</string>
     <string name="prefs_sample">Sample rate</string>
     <string name="prefs_sample_summary">Determine the sample rate, and hence frequency range</string>
@@ -97,6 +114,8 @@ for more details.\n</string>
     <string name="lab_azi">Az</string>
     <string name="lab_alt">Alt</string>
     <string name="lab_mag">Mag</string>
+    <string name="lab_scan_start">SCAN</string>
+    <string name="lab_scan_stop">HOLD</string>
     <string name="lab_aco_wave">Waveform</string>
     <string name="lab_aco_spec">Spectrum</string>
     <string name="lab_aco_power">Power</string>
@@ -105,7 +124,6 @@ for more details.\n</string>
     <string name="lab_speed">Spd</string>
     <string name="lab_cell">Cellular</string>
     <string name="lab_wifi">WiFi</string>
-    <string name="lab_gps_power">GPS Pwr</string>
     <string name="lab_wifi_power">WiFi Pwr</string>
     <string name="lab_solar_prot">Protons</string>
     <string name="lab_solar_elec">Electrons</string>
