--- a/TiltLander/res/values/strings.xml
+++ b/TiltLander/res/values/strings.xml
@@ -69,6 +69,10 @@ the License.</string>
 	<string name="message_off_pad">Off Landing Pad</string> 
 	<string name="message_too_fast">Too Fast</string> 
 	<string name="message_bad_angle">Bad Angle</string> 
+	
+	<string name="warn_speed">Overspeed</string> 
+	<string name="warn_angle">Angle</string> 
+	<string name="warn_fuel">Fuel low</string> 
 
     <string name="lunar_layout_text_text"></string>
     
